--- a/twformula_FACE.html
+++ b/twformula_FACE.html
@@ -96,103 +96,102 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div style="height:20px;"></div>
 <ul class="nav nav-tabs nav-justified">
      <li role="presentation" class="active" ><a href="twformula_FACE.html"><h4 class="twFOh3">粉底</h4></a></li>
-    <li role="presentation"><a href="twformula_FConcealer.html"><h4>遮瑕&修飾</h4></a></li>
+    <li role="presentation"><a href="twformula_FConcealer.html"><h4>遮瑕</h4></a></li>
     <li role="presentation"><a href="twformula_FPowder.html"><h4>粉餅</h4></a></li>
 </ul>
      <div class="row">
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/2-12_face_LLLF-01.jpg" alt="持久粉底液">
+      <img src="images/formula/01_Primer-01.jpg" alt="妝前乳">
             <div class="caption">
-        <h3 class="FOh3">持久粉底液<br></h3>
-        <p>● 添加玻尿酸&海藻醣<br>● 質地清爽水潤<br>● 高遮瑕不黏膩<br>● 創造絲絨般膚質</p>
+        <h3 class="twFOh3">妝前乳<br></h3>
+        <p>● 服貼<br>● 均勻膚色<br>● 提亮<br><br></p>
             </div>
     </div>
         </div>
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/2-13_face_BFC-01.jpg" alt="彈力霜粉餅">
+      <img src="images/formula/02_Color%20Correcting%20Cream-01.jpg" alt="飾底乳">
             <div class="caption">
-        <h3 class="FOh3">彈力霜粉餅<br></h3>
-        <p>● 矽膠Q粉餅<br>● 由膏轉變為粉末<br>● 滑順服貼<br>● 清爽不油膩<br>● 持久不泛油光 </p>
+        <h3 class="twFOh3">飾底乳<br></h3>
+        <p>● 添加防曬SPF30<br>● 控油成分<br>● 質感柔滑清爽不油膩<br>● 不同色系可矯正膚色 </p>
             </div>
     </div>
         </div>
         <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/5-11_series_CF-01.jpg" alt="氣墊粉餅">
+      <img src="images/formula/03_Tinted%20Moisturizer-01.jpg" alt="隔離霜">
             <div class="caption">
-        <h3 class="FOh3">氣墊粉餅<br></h3>
-        <p>●添加草本精華<br>● 水潤不油膩<br>● 持久輕透<br>● 提亮遮瑕<br>● 防水不易脫妝 <br></p>
+        <h3 class="twFOh3">隔離霜<br></h3>
+        <p>● 添加防曬SPF15成分<br>● 添加清爽型矽油<br>● 保濕<br>● 好推塗<br>● 不黏膩</p>
             </div>
     </div>
         </div>
-<!--old-->  
-        <div class="col-sm-6 col-md-4">
+        <div class="col-sm-12 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/formula_face_1-01.jpg" alt="Flawless BB Cream">
+      <img src="images/formula/04_Liquid%20Foundation-01.jpg" alt="霧面粉底液">
             <div class="caption">
-        <h3 class="twFOh3">高遮瑕BB霜<br></h3>
-        <p>● 集結精華液,保濕,隔離,遮瑕及防曬於一身的全方位保養級化妝品。<br>● 質地滑順好塗抹,在遮蓋斑點瑕疵同時能賦予肌膚柔嫩與保濕,創造嬰兒般滑潤無暇的好膚質~<br></p>
             </div>
     </div>
         </div>
     
-         <div class="col-sm-6 col-md-4">
+         <div class="col-sm-12 col-md-8">
     <div class="thumbnail">
-      <img src="images/formula/formula_face_2-01.jpg" alt="Oil-control BB Cream">
             <div class="caption">
-        <h3 class="twFOh3">礦物控油BB霜<br></h3>
-        <p>● 添加皮脂控油成份，維持全天美肌不脫妝<br>
-           ● 礦物配方，無負擔 ，敏感肌也適用  <br>
-           ● 結合美白、抗皺、防曬三重功能的機能性BB霜<br>
-           ● 完美修飾毛孔、暗沉、膚色不均等肌膚問題 <br></p>
+        <h3 class="twFOh3">霧面粉底液<br></h3>
+        <p>服貼不厚重並且有良好的延展性/細緻的粉體，創造霧面妝感/修飾臉部瑕疵/防水</p>
+        <h3 class="twFOh3">持久霧面粉底液<br></h3>
+        <p>持妝完美/添加液態光感技術/防水</p>
+        <h3 class="twFOh3">光澤肌粉底乳<br></h3>
+        <p>適度遮瑕/潤澤持久/保濕控油/防水</p>
+        <h3 class="twFOh3">粉凝粉底霜<br></h3>
+        <p>自然光澤/防水</p>
+        <h3 class="twFOh3">亮采粉底液<br></h3>
+        <p>SPF30/鎖水保濕/控油/添加液態光感技術，瞬間提亮/防水</p>
             </div>
     </div>
         </div>
    
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/formula_face_3-01.jpg" alt="CC Cream">
+      <img src="images/formula/05_BB%20Cream-01.jpg" alt="BB霜">
             <div class="caption">
-        <h3 class="twFOh3">變色CC霜<br></h3>
-        <p>● 輕鬆掃除黯沉不泛白,添加礦物粉體及保濕精華,在均勻推開的同時,使肌膚不僅水潤更能得到完整的保護。<br>            ● 散發宛如天生的自然好膚質!<br><br><br></p>
+        <h3 class="twFOh3">BB霜<br></h3>
+        <p>● 清爽，好推塗，不黏膩<br>● 保濕<br>● 添加清爽型矽油<br></p>
             </div>
     </div>
         </div>
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/formula_face_4-01.jpg" alt="Whitening CC Cream">
+      <img src="images/formula/06_CC%20Cream-01.jpg" alt="CC霜">
             <div class="caption">
-        <h3 class="twFOh3">美白CC霜<br></h3>
-        <p>● 溫和保養系CC霜，採用輕盈富水感的水基底配方，呈現透明感美顏<br>
-            ● 打亮肌膚，修飾暗沉與膚色不均<br>
-            ● 添加美白成分，上粧保養一次搞定<br>
-            ● 防曬效果<br></p>
+        <h3 class="twFOh3">CC霜<br></h3>
+        <p>● 控油鎖水<br>
+            ● 添加液態光感技術，在保持遮瑕力的同時煥發自然光澤<br></p>
             </div>
     </div>
         </div>
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/formula_face_6-01.jpg" alt="Creamy Foundation">
+      <img src="images/formula/07_Cushion%20Foundation-01.jpg" alt="氣墊粉餅">
             <div class="caption">
-        <h3 class="twFOh3">粉底霜<br></h3>
-        <p>● 輕薄透氣，抗水抗汗，從早到晚12小時完美遮瑕<br>
-            ● 延展礦物性粉體，塗抹於肌膚上瞬間化成液狀，完全服貼彷彿未上妝<br>
-            ● 遮蓋效果佳，霧化瑕疵及毛孔<br>
-            ● 防曬效果<br></p>
+        <h3 class="twFOh3">氣墊粉餅<br></h3>
+        <p>● 添加草本精華<br>
+            ● 水潤不油膩<br>
+            ● 持久輕透<br>
+            ● 提亮遮瑕<br>● 防水不易脫妝</p>
             </div>         
     </div>
 </div>
           <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/formula_face_7-01.jpg" alt="Foundation Stick">
+      <img src="images/formula/08_Cream%20to%20Powder%20Foundation-01.jpg" alt="粉凝霜">
             <div class="caption">
-        <h3 class="twFOh3">粉條<br></h3>
-        <p>● 質地柔軟滑順，擁有良好的延展性<br>
-            ● 具有粉底、遮瑕、唇部打底或是補妝等多種功效<br>
-            ● 添加美容液，上妝的同時亦可保養肌膚<br>
-            ● 防曬效果<br></p>
+        <h3 class="twFOh3">粉凝霜<br></h3>
+        <p>● 自然妝感<br>
+            ● 持久無瑕<br>
+            ● 遮瑕力佳，色澤質感保持完美<br>
+            ● 附著力佳<br></p>
             </div>         
     </div>
 </div>
