--- a/twformula_FConcealer.html
+++ b/twformula_FConcealer.html
@@ -96,22 +96,22 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div style="height:20px;"></div>
 <ul class="nav nav-tabs nav-justified">
      <li role="presentation" ><a href="twformula_FACE.html"><h4>粉底</h4></a></li>
-    <li role="presentation" class="active"><a href="twformula_FConcealer.html"><h4 class="twFOh3">遮瑕&修飾</h4></a></li>
+    <li role="presentation" class="active"><a href="twformula_FConcealer.html"><h4 class="twFOh3">遮瑕</h4></a></li>
     <li role="presentation"><a href="twformula_FPowder.html"><h4>粉餅</h4></a></li>
 </ul>
      <div class="row">
  <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/2-11_face_OCP-01.jpg" alt="控油妝前乳">
+      <img src="images/formula/12_Liquid%20Concealer-01.jpg" alt="遮瑕液">
             <div class="caption">
-        <h3 class="twFOh3">控油妝前乳<br></h3>
-        <p>● 添加玻尿酸&控油成分<br>● 肌膚持續飽水<br>● 肌膚透亮<br>● 防止脫妝</p>
+        <h3 class="twFOh3">遮瑕液<br></h3>
+        <p>● 高度遮瑕細緻控油粉體<br>● 以唇蜜棒沾取方便使用<br>● 持久無瑕<br>● 服貼不卡粉</p>
             </div>
     </div>
         </div>
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/2-18_face_CPen-01.jpg" alt="遮瑕筆">
+      <img src="images/formula/11_Concealer%20Pen-01.jpg" alt="遮瑕筆">
             <div class="caption">
         <h3 class="twFOh3">遮瑕筆<br></h3>
         <p>● 高度遮瑕細緻控油粉體<br>● 筆形方便使用<br>● 持久無瑕<br>● 服貼不卡粉</p>
@@ -120,79 +120,21 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
                  <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/2-19_face_LC-01.jpg" alt="遮瑕液">
+      <img src="images/formula/10_Concealer-01.jpg" alt="遮瑕膏">
             <div class="caption">
-        <h3 class="twFOh3">遮瑕液<br></h3>
-        <p>● 高度遮瑕細緻控油粉體<br>● 以唇蜜棒沾取方便使用<br>● 持久無瑕<br>● 服貼不卡粉</p>
+        <h3 class="twFOh3">遮瑕膏<br></h3>
+        <p>● 滑順服貼<br>● 持久無瑕,色澤質感保持完美<br>● 質地輕、不厚重，妝感自然<br><br></p>
             </div>
     </div>
         </div>        <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/2-20_face_CS-01.jpg" alt="遮瑕棒">
+      <img src="images/formula/13_Concealer%20Stick-01.jpg" alt="遮瑕棒">
             <div class="caption">
-        <h3 class="twFOh3">遮瑕棒<br></h3>
+        <h3 class="twFOh3">遮瑕條<br></h3>
         <p>● 高度遮瑕細緻控油粉體<br>● 添加賽洛美<br>● 修護滋潤肌膚<br>● 持久無瑕<br>● 服貼不卡粉</p>
             </div>
     </div>
-        </div>
-              <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/2-21_face_ConcealerP-01.jpg" alt="遮瑕盤">
-            <div class="caption">
-        <h3 class="twFOh3">遮瑕盤<br></h3>
-        <p>● 高度遮瑕細緻控油粉體<br>● 添加賽洛美<br>● 修護滋潤肌膚<br>● 持久無瑕<br>● 服貼不卡粉</p>
-            </div>
-    </div>
-        </div>
-         
-<!--old-->
-        <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/formula_face_21-01.jpg" alt="Primer">
-            <div class="caption">
-        <h3 class="twFOh3">妝前乳<br></h3>
-        <p>● 天然保濕複合物滋潤肌膚，持續一整天水潤不卡粉---需列出更多保濕成分(角鯊烯/胺基酸/玻尿酸/膠原蛋白…)<br>
-            ● 讓底粧如停格般維持剛上粧的完美感，長時間維持粧效<br>
-            ● 無香料<br><br><br><br><br></p>
-            </div>
-    </div>
-        </div>
-    
-   
-         <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/formula_face_23-01.jpg" alt="Corrector">
-            <div class="caption">
-        <h3 class="twFOh3">飾底乳<br></h3>
-        <p>● 超提亮、超控油、超持妝<br>
-            ● 具有潤色效果，修飾膚色不均<br>
-            ● 添加天然礦物粉體，吸收過度分泌的油脂<br>
-            ● 無香料<br><br><br><br><br></p>
-            </div>
-    </div>
-        </div>
-         <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/formula_face_24-01.jpg" alt="Protector">
-            <div class="caption">
-        <h3 class="twFOh3">隔離霜<br></h3>
-        <p>● 改善乾燥小皮屑造成的卡粉不服貼<br>
-            ● 添加珠光，自然細緻的妝效，修飾膚色不均，提亮勻透好膚質<br>
-            ● 高保濕配方(玻尿酸、甘油)，持續水潤柔滑妝容<br>
-            ● 無香料</p>
-            </div>
-    </div>
-        </div>
-           <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/formula_face_29-01.jpg" alt="Pore Balm">
-            <div class="caption">
-        <h3 class="twFOh3">毛孔隱形霜<br></h3>
-        <p>● 使肌膚更加細滑的打底霜，使用後能讓妝感更服貼<br>
-            ● 質地保溼清爽，能有效控油及遮蓋毛孔<br></p>
-            </div>         
-    </div>
-</div>
+        </div>        
     </div>
 </div>
     </div>
