--- a/twformula_FPowder.html
+++ b/twformula_FPowder.html
@@ -96,69 +96,56 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div style="height:20px;"></div>
 <ul class="nav nav-tabs nav-justified">
      <li role="presentation" ><a href="twformula_FACE.html"><h4>粉底</h4></a></li>
-    <li role="presentation"><a href="twformula_FConcealer.html"><h4>遮瑕&修飾</h4></a></li>
+    <li role="presentation"><a href="twformula_FConcealer.html"><h4>遮瑕</h4></a></li>
     <li role="presentation" class="active"><a href="twformula_FPowder.html"><h4 class="twFOh3">粉餅</h4></a></li>
 </ul>
      <div class="row">
       <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/2-15_face_PSP-01.jpg" alt="蜜粉餅">
+      <img src="images/formula/14_UV%20Block%20Foundation-01.jpg" alt="防曬粉餅">
             <div class="caption">
-        <h3 class="twFOh3">蜜粉餅<br></h3>
-        <p>● 柔和多色蜜粉餅<br>● 透明發色不泛白<br>● 修飾問題肌膚<br>● 定妝好幫手<br></p>
+        <h3 class="twFOh3">防曬粉餅<br></h3>
+        <p>● 清透妝感<br>● 具物理性防曬成分，搭配潤膚矽油親膚性油酯<br>● 質地輕，妝感不厚重<br></p>
             </div>
     </div>
         </div>
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/2-16_face_PPF-01.jpg" alt="持妝粉餅">
+      <img src="images/formula/15_Two-way%20Cake-01.jpg" alt="兩用粉餅">
             <div class="caption">
-        <h3 class="twFOh3">持妝粉餅<br></h3>
-        <p>● 細緻服貼<br>● 自然遮瑕<br>● 創造無瑕好膚質<br><br></p>
+        <h3 class="twFOh3">兩用粉餅<br></h3>
+        <p>● 添加防曬成分<br>● 持久不脫妝<br>● 良好的防水、防油效果<br>● 推塗滑順不乾澀<br>● SPF 15<br></p>
             </div>
     </div>
          </div>
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/2-23_face_WTWC-01.jpg" alt="防水粉餅">
+      <img src="images/formula/16_Perfect Coverage Foundation-01.jpg" alt="防水粉餅">
             <div class="caption">
-        <h3 class="twFOh3">防水粉餅<br></h3>
-        <p>● 持久防水質地<br>● 乾濕兩用<br>● 雙重妝感<br><br></p>
+        <h3 class="twFOh3">高遮瑕粉餅<br></h3>
+        <p>● 高遮瑕效果<br><br><br><br><br></p>
             </div>
     </div>
         </div>
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/2-17_face_LP-01.jpg" alt="柔霧蜜粉">
+      <img src="images/formula/17_Loose%20Setting%20Powder-01.jpg" alt="單色蜜粉">
             <div class="caption">
-        <h3 class="twFOh3">柔霧蜜粉<br></h3>
-        <p>●添加控油柔滑粒子<br>● 微米級細緻粉末<br>● 完全遮蓋毛孔<br>● 打造柔光美顏</p>
+        <h3 class="twFOh3">單色蜜粉<br></h3>
+        <p>●蘆薈保濕<br>● 明亮光澤<br>● 持久定妝</p>
             </div>
     </div>
         </div>
         <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/formula_face_41-01.jpg" alt="Mineral Pressed Powder">
+      <img src="images/formula/18_Setting%20Powder-01.jpg" alt="混色蜜粉餅">
             <div class="caption">
-        <h3 class="twFOh3">礦物粉餅<br></h3>
-        <p>● 長時間維持潤澤粧感，滋潤服貼、自然光滑<br>
-            ● 遮飾肌膚瑕疵，打造輕透無厚重的輕齡美肌 <br>      ● 天然成分不會造成肌膚負擔及阻塞毛孔<br></p>
+        <h3 class="twFOh3">混色蜜粉餅<br></h3>
+        <p>● 柔焦妝感<br>
+            ● 輕鬆定妝 <br> ● 妝感不厚重<br></p>
             </div>
     </div>
         </div>
-         <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/formula_face_46-01.jpg" alt="Mineral Loose Powder">
-            <div class="caption">
-        <h3 class="twFOh3">礦物蜜粉<br></h3>
-        <p>● 巧妙的將保養的概念延伸到彩妝。<br>
-            ● 在成分上用的是溫和無負擔的天然礦物作為基劑。即使是敏感肌也可以自由自在的擁有美麗彩妝。<br>
-            ● 成分中的氧化鋅及二氧化鈦具有物理性的抗紫外線功能，能隔離辦公室日光燈對皮膚的傷害。<br>
-            ● 它的粉末為一扁平的微晶顆粒，所以觸感柔滑、細緻又服贴。<br>
-            ● 只要用一般的洗面乳清洗即可。</p>
-            </div>         
-    </div>
-</div>
     </div>
 </div>
     </div>
