--- a/twformula_LIPS.html
+++ b/twformula_LIPS.html
@@ -95,85 +95,123 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <img src="images/formula/2018formula_LIP-01.jpg"  class="img-responsive aboutimage">
     <div style="height:20px;"></div>
     <ul class="nav nav-tabs nav-justified">
-   <li role="presentation"  class="active"><a href="twformula_LIPS.html"><h4 class="twFOh3">液態口紅</h4></a></li>
+   <li role="presentation"  class="active"><a href="twformula_LIPS.html"><h4 class="twFOh3">液態唇彩</h4></a></li>
     <li role="presentation"><a href="twformula_lipstick.html"><h4>固態口紅</h4></a></li>
 </ul>
      <div class="row">
     <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/1-01_lips_MLL-01.jpg" alt="霧面口紅蜜">
+      <img src="images/formula/68_Lip%20Essence-01.jpg" alt="護唇膏">
             <div class="caption">
-        <h3 class="twFOh3">霧面口紅蜜<br></h3>
-        <p>● 霧面質地 <br>● 飽和顯色<br>● 持久防水
+        <h3 class="twFOh3">護唇膏<br></h3>
+        <p>● 添加潤澤美容液 <br>● 修飾提亮唇色<br>● 增添氣色同時保養唇部
          </p>
             </div>
     </div>
         </div>
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/1-02_lips_DLT-01.jpg" alt="金屬光口紅蜜">
+      <img src="images/formula/69_Lip%20Oil-01.jpg" alt="唇油">
             <div class="caption">
-        <h3 class="twFOh3">金屬光口紅蜜<br></h3>
-        <p>● 奢華光芒 <br>● 飽和顯色 <br>● 持久閃耀<br><br>
+        <h3 class="twFOh3">唇油<br></h3>
+        <p>● 添加唇部滋養保濕成分<br>● 遮蓋唇紋<br>● 增添好氣色<br><br>
          </p>
             </div>
     </div>
         </div>
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/1-03_lips_LT-01.jpg" alt="亮澤口紅蜜">
+      <img src="images/formula/77_Metallic%20Lip%20Gloss-01.jpg" alt="金屬光唇彩">
             <div class="caption">
-        <h3 class="twFOh3">亮澤口紅蜜<br></h3>
-        <p>●輕透顯色<br>● 宛如天生<br>● 持久防水不掉色<br><br><br>
+        <h3 class="twFOh3">金屬光唇彩<br></h3>
+        <p>● 閃亮金屬光澤<br>● 減少唇紋<br>● 不黏膩<br><br><br>
          </p>
             </div>
     </div>
         </div>
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/1-04_lips_WLLM-01.jpg" alt="霧面唇釉">
+      <img src="images/formula/78_Lip%20Lacquer-01.jpg" alt="鏡面唇彩">
             <div class="caption">
-        <h3 class="twFOh3">霧面唇釉<br></h3>
-        <p>● 霧面妝感<br>● 持久飽和<br>● 柔軟不緊繃
+        <h3 class="twFOh3">鏡面唇彩<br></h3>
+        <p>● 潤澤持久<br>● 滑順好塗抹
          </p>
             </div>
     </div>
         </div>
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/1-05_lips_WLLS-01.jpg" alt="絲綢唇釉">
+      <img src="images/formula/79_Velvet%20Lip%20Cream-01.jpg" alt="霧面唇彩">
             <div class="caption">
-        <h3 class="twFOh3">絲綢唇釉<br></h3>
-        <p>● 絲綢光澤質地<br>● 持久飽和<br>● 柔軟不緊繃
+        <h3 class="twFOh3">霧面唇彩<br></h3>
+        <p>● 粉霧妝感
+            vs綿密絲滑兩種妝感
          </p>
             </div>
     </div>
         </div>
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/1-06_lips_LO-01.jpg" alt="滋養潤唇油">
+      <img src="images/formula/81_Non-Sticky%20Lip%20Gloss-01.jpg" alt="不黏唇彩">
             <div class="caption">
-        <h3 class="twFOh3">滋養潤唇油<br></h3>
-        <p>● 添加唇部滋養保濕成分<br>● 遮蓋唇紋<br>● 增添好氣色<br>
+        <h3 class="twFOh3">不黏唇彩<br></h3>
+        <p>● 輕透自然<br>● 亮麗珠光<br>
+         </p>
+            </div>
+    </div>
+        </div>
+         <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/80_Waterproof%20Liquid%20Lipstick-01.jpg" alt="不沾杯">
+            <div class="caption">
+        <h3 class="twFOh3">不沾杯<br></h3>
+        <p>● 霧面妝感<br>● 持久飽和<br>● 柔軟不緊繃<br>
+         </p>
+            </div>
+    </div>
+        </div>
+         <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/80_Metallic%20Waterproof%20Liquid%20Lipstick-01.jpg" alt="金屬不沾杯">
+            <div class="caption">
+        <h3 class="twFOh3">金屬不沾杯<br></h3>
+        <p>● 金屬光澤質地<br>● 持久飽和<br>● 柔軟不緊繃<br>
+         </p>
+            </div>
+    </div>
+        </div>
+         <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/80_Long-Lasting%20Waterproof%20Liquid%20Lipstick-01.jpg" alt="持久不沾杯">
+            <div class="caption">
+        <h3 class="twFOh3">持久不沾杯<br></h3>
+        <p>● 絲綢光澤質地<br>● 持久飽和<br>● 柔軟不緊繃<br>
+         </p>
+            </div>
+    </div>
+        </div>
+         <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/82_Lip%20Tint-01.jpg" alt="染唇露">
+            <div class="caption">
+        <h3 class="twFOh3">染唇露<br></h3>
+        <p>● 輕透顯色<br>● 宛如天生<br>● 持久防水不掉色<br>
+         </p>
+            </div>
+    </div>
+        </div>
+         <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/83_Lip%20Topper-01.jpg" alt="金屬水性唇彩">
+            <div class="caption">
+        <h3 class="twFOh3">金屬水性唇彩<br></h3>
+        <p>● 高保濕<br>● 滋潤不黏膩<br>● 防水<br>
          </p>
             </div>
     </div>
         </div>
          
-<!--old-->         
-         <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/formula_lips_2-01.jpg" alt="Hydrating Lipgloss">
-            <div class="caption">
-        <h3 class="twFOh3">高保濕唇蜜<br></h3>
-        <p>● 透明感的顯色效果，使唇部如寶石般閃耀。<br> 
-            ● 添加美容液滋潤唇部，長時間維持唇部的潤澤
-            <br></p>
-            </div>
-    </div>
-        </div>
-        </div>
-         
+        </div> 
     </div>
 </div>
 
