--- a/twformula_lipstick.html
+++ b/twformula_lipstick.html
@@ -95,94 +95,104 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <img src="images/formula/2018formula_LIP-01.jpg"  class="img-responsive aboutimage">
     <div style="height:20px;"></div>
     <ul class="nav nav-tabs nav-justified">
-   <li role="presentation"><a href="twformula_LIPS.html"><h4>液態口紅</h4></a></li>
+   <li role="presentation"><a href="twformula_LIPS.html"><h4>液態唇彩</h4></a></li>
     <li role="presentation"  class="active"><a href="twformula_lipstick.html"><h4  class="twFOh3">固態口紅</h4></a></li>
 </ul>
      <div class="row">
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/1-07_lips_UML-01.jpg" alt="霧面唇膏">
+      <img src="images/formula/68_Lip%20Balm-01.jpg" alt="口紅盤">
             <div class="caption">
-        <h3 class="twFOh3">霧面唇膏<br></h3>
-        <p>● 霧面性感美唇<br>● 飽和顯色<br>● 添加維他命E，滑順好延展
+        <h3 class="twFOh3">條狀護唇膏<br></h3>
+        <p>● 添加潤澤美容液<br>● 修飾提亮唇色<br>● 增添氣色同時保養唇部
          </p>
             </div>
     </div>
         </div>
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/1-09_lips_24K-01.jpg" alt="金沙口紅">
+      <img src="images/formula/70_Lipstick%20Palette-01.jpg" alt="口紅盤">
+            <div class="caption">
+        <h3 class="twFOh3">口紅盤<br></h3>
+        <p>● 添加抗氧化成分<br>● 輕質透氣油脂<br>● 植物&類羊毛脂合成脂減少唇紋<br>● 滋潤保濕
+         </p>
+            </div>
+    </div>
+        </div>
+         <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/71_Lip%20Mousse-01.jpg" alt="慕斯口紅盤">
+            <div class="caption">
+        <h3 class="twFOh3">慕斯口紅盤<br></h3>
+        <p>● 微霧妝感<br>● 空氣感質地,塗抹感舒適,均勻<br>● 顯色<br>● 持久
+         </p>
+            </div>
+    </div>
+        </div>
+         <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/72_Moist%20Lipstick-01.jpg" alt="亮澤口紅">
+            <div class="caption">
+        <h3 class="twFOh3">亮澤口紅<br></h3>
+        <p>● 添加維他命E&保濕成分<br>● 塗抹感滑順<br>● 創造嬌嫩欲滴雙唇<br><br>
+         </p>
+            </div>
+    </div>
+        </div>
+         <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/73_Glossy%20Lipstick-01.jpg" alt="鏡面口紅">
+            <div class="caption">
+        <h3 class="twFOh3">鏡面口紅<br></h3>
+        <p>● 亮澤漆光<br>● 保濕潤膚<br>● 抗氧化<br>● 淡淡的香草味
+         </p>
+            </div>
+    </div>
+        </div>          
+         <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/74_Sheer%20Gold%20Lipstick-01.jpg" alt="Slim Lipstick">
             <div class="caption">
         <h3 class="twFOh3">金沙口紅<br></h3>
-        <p>● 銀河般閃耀<br>● 滑順好塗抹<br>● 滋潤唇部<br>● 上妝同時保養
-         </p>
+        <p>● 銀河般閃耀<br>● 滑順好塗抹<br>● 滋潤唇部<br>● 上妝同時保養</p>
             </div>
     </div>
         </div>
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/1-10_lips_CL-01.jpg" alt="Cooling Lipstick">
+      <img src="images/formula/75_Matte%20Lipstick-01.jpg" alt="霧面口紅">
             <div class="caption">
-        <h3 class="twFOh3">酷涼唇膏<br></h3>
-        <p>● 涼感配方<br>● 持久顯色<br>● 質地輕透<br><br>
+        <h3 class="twFOh3">霧面口紅<br></h3>
+        <p>● 柔滑好塗抹  <br>                                      ● 保水<br>● 低調優雅的霧面妝感
          </p>
             </div>
     </div>
         </div>
-         <div class="col-sm-6 col-md-4">
+           <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/1-11_lips_LL-01.jpg" alt="唇線筆">
+      <img src="images/formula/76_Velvet%20Lipstick-01.jpg" alt="絲滑口紅">
+            <div class="caption">
+        <h3 class="twFOh3">絲滑口紅<br></h3>
+        <p>● 絲絨般的柔軟服貼<br> ● 無油膩感<br> ● 色澤完美</p>
+            </div>
+    </div>
+        </div>
+          <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img src="images/formula/85_Lip%20Liner-01.jpg" alt="唇線筆">
             <div class="caption">
         <h3 class="twFOh3">唇線筆<br></h3>
-        <p>● 滑順好推勻<br>● 顏色飽和<br>● 持久防水<br>● 筆蓋附筆削方便使用
+        <p>● 滑順好推勻<br>● 顏色飽和<br>● 持久防水<br>
          </p>
-            </div>
-    </div>
-        </div>
-<!--old-->             
-         <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/formula_lips_3-01.jpg" alt="Slim Lipstick">
-            <div class="caption">
-        <h3 class="twFOh3">蜜口紅<br></h3>
-        <p>● 擁有滑順的塗抹感及卓越的顯色度。<br> ● 不僅添加富含滋潤效果並形成保濕層的荷荷芭精油以外，還添加細緻閃耀的有色珠光，所以就算在冬天塗抹也不擔心唇部乾燥，還能保有水潤及飽滿的立體雙唇!!<br></p>
             </div>
     </div>
         </div>
          <div class="col-sm-6 col-md-4">
     <div class="thumbnail">
-      <img src="images/formula/formula_lips_4-01.jpg" alt="Triple Lipcolor">
+      <img src="images/formula/86_Lip%20Crayon-01.jpg" alt="口紅筆">
             <div class="caption">
-        <h3 class="twFOh3">三色口紅<br></h3>
-        <p>● 結合協調的三色的唇膏。  <br>                                      ● 只要一筆畫,立現楚楚可憐的咬唇妝,讓整體妝容更柔和自然!<br><br><br><br><br><br><br>
-         </p>
-            </div>
-    </div>
-        </div>
-           <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/formula_lips_6-01.jpg" alt="Tint Lipliner">
-            <div class="caption">
-        <h3 class="twFOh3">唇彩筆<br></h3>
-        <p>● 顯色的霧面配方, 添加維他命B5能滋潤雙唇，淡化唇紋。           <br> ● 亦可做非Paraben配方並符合FDA /EEC 或是MTI系統防腐劑。<br> ● 毛刷部分亦可做其他選擇 </p>
-            </div>
-    </div>
-        </div>
-           <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/formula_lips_7-01.jpg" alt="2 in1 Lipstick">
-            <div class="caption">
-        <h3 class="twFOh3">滋養雙效唇膏<br></h3>
-        <p>● 內芯為美容液配方，擁有漂亮嘴唇的同時也兼具保濕效果。<br>● 獨家顯色透亮粒子，輕鬆打造清新色澤的晶透美唇</p>
-            </div>
-    </div>
-        </div>
-           <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img src="images/formula/formula_lips_8-01.jpg" alt="Nourishing Lipcolor">
-            <div class="caption">
-        <h3 class="twFOh3">美潤唇膏<br></h3>
-        <p>● 富含滋潤修護的維他命E及蘆薈精華,讓雙唇在迷人香氣中得到最愉快的呵護!<br>
+        <h3 class="twFOh3">口紅筆<br></h3>
+        <p>● 滑順好推勻<br>● 顏色飽和<br>● 滋潤持久<br>● 改善唇紋
          </p>
             </div>
     </div>
